@@ -256,6 +256,8 @@ int CFG_LoadConfig(const char *alternate_config_filename)
 				else
 					Log_print("Invalid Mosaic RAM number of banks: %s", ptr);
 			}
+			else if (strcmp(string, "ENABLE_MAPRAM") == 0)
+				MEMORY_enable_mapram = Util_sscanbool(ptr);
 			else if (strcmp(string, "BUILTIN_BASIC") == 0)
 				Atari800_builtin_basic = Util_sscanbool(ptr);
 			else if (strcmp(string, "KEYBOARD_LEDS") == 0)
@@ -383,6 +385,7 @@ int CFG_WriteConfig(void)
 	fprintf(fp, (Atari800_tv_mode == Atari800_TV_PAL) ? "DEFAULT_TV_MODE=PAL\n" : "DEFAULT_TV_MODE=NTSC\n");
 	fprintf(fp, "MOSAIC_RAM_NUM_BANKS=%d\n", MEMORY_mosaic_num_banks);
 	fprintf(fp, "AXLON_RAM_NUM_BANKS=%d\n", MEMORY_axlon_num_banks);
+	fprintf(fp, "ENABLE_MAPRAM=%d\n", MEMORY_enable_mapram);
 
 	fprintf(fp, "DISABLE_BASIC=%d\n", Atari800_disable_basic);
 	fprintf(fp, "ENABLE_SIO_PATCH=%d\n", ESC_enable_sio_patch);
